Scrollbar fix

--- a/shared/js/cyph/components/account/account.component.scss
+++ b/shared/js/cyph/components/account/account.component.scss
@@ -48,6 +48,10 @@
 		}
 	}
 
+	.content, .sidebar.contacts {
+		overflow: hidden;
+	}
+
 	.avatar {
 		border-radius: 50%;
 		border-width: 5px;
